Update: add connection string

--- a/MasterServicesFZ.API/appsettings.Development.json
+++ b/MasterServicesFZ.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PostgreConnection": "Host=192.168.50.147; Database=fnz; Username=cnx_finanzauto; Password=VAaudS5T"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
