--- a/VehicleBrands.Application/MasterServicesFZ.Application.csproj
+++ b/VehicleBrands.Application/MasterServicesFZ.Application.csproj
@@ -19,4 +19,14 @@
     <ProjectReference Include="..\VehicleBrands.Domain\MasterServicesFZ.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Querys\Departaments\" />
+    <Folder Include="Features\Querys\Cities\" />
+    <Folder Include="Features\Querys\Occupations\" />
+    <Folder Include="Features\Querys\VehicleTypes\" />
+    <Folder Include="Features\Querys\VehicleClass\" />
+    <Folder Include="Features\Querys\VehicleBrands\" />
+    <Folder Include="Features\Querys\VehicleModels\" />
+  </ItemGroup>
+
 </Project>
