Add: crédito db connection string

--- a/MasterServicesFZ.API/appsettings.Development.json
+++ b/MasterServicesFZ.API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "PostgreConnection": "Host=192.168.50.147; Database=fnz; Username=cnx_finanzauto; Password=VAaudS5T"
+    "PostgreConnection": "Host=192.168.50.147; Database=fnz; Username=cnx_finanzauto; Password=VAaudS5T",
+    "SqlConnection": "Data Source=192.168.50.39\\TEST;database=Credito;uid=DevPlaneacion;password=CimEfRiB#767"
   },
   "Logging": {
     "LogLevel": {
