--- a/VehicleBrands.Application/MasterServicesFZ.Application.csproj
+++ b/VehicleBrands.Application/MasterServicesFZ.Application.csproj
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Querys\Departaments\" />
     <Folder Include="Features\Querys\Cities\" />
+    <Folder Include="Features\Querys\Departaments\GetAllDepartaments\" />
     <Folder Include="Features\Querys\Occupations\" />
     <Folder Include="Features\Querys\VehicleTypes\" />
     <Folder Include="Features\Querys\VehicleClass\" />
