--- a/MasterServicesFZ.API/appsettings.Production.json
+++ b/MasterServicesFZ.API/appsettings.Production.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "PostgreConnection": "Host=192.168.50.147; Database=fnz; Username=cnx_finanzauto; Password=VAaudS5T",
-    "SqlConnection": "Data Source=192.168.50.39\\TEST;database=Credito;uid=DevPlaneacion;password=CimEfRiB#767"
+    "SqlConnection": "Data Source=192.168.50.39\\TEST;database=Credito;uid=DevPlaneacion;password=CimEfRiB#767",
+    "CreditProductsConnection": "Data Source=192.168.50.39\\TEST;database=ProductosCredito;uid=DevPlaneacion;password=CimEfRiB#767"
   },
   "Logging": {
     "LogLevel": {
