Add api key client settings

--- a/MasterServicesFZ.API/appsettings.Development.json
+++ b/MasterServicesFZ.API/appsettings.Development.json
@@ -9,5 +9,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApikeyClientsSettings": {
+    "UrlBase": "https://www.finanzauto.info/Finanzauto.Utils.Authentication/api/v1/",
+    "ApiKey": "fz-1WmAmmd0kHl4sfLxpGtmPEq4JqkVu1r2V"
   }
 }
