--- a/MasterServicesFZ.API/MasterServicesFZ.API.csproj
+++ b/MasterServicesFZ.API/MasterServicesFZ.API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="dotenv.net" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MasterServicesFZ.Auth\MasterServicesFZ.Auth.csproj" />
     <ProjectReference Include="..\VehicleBrands.Application\MasterServicesFZ.Application.csproj" />
     <ProjectReference Include="..\VehicleBrands.Infrastructure\MasterServicesFZ.Infrastructure.csproj" />
   </ItemGroup>
